--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Life in the Wild</h1>
+    /*This where the contents are contained*/
     <div class="container">
       <img
         src="https://static.pexels.com/photos/52500/horse-herd-fog-nature-52500.jpeg"
